Fix button visibility issue

--- a/src/pages/Spaces/Auditory/auditory.module.css
+++ b/src/pages/Spaces/Auditory/auditory.module.css
@@ -97,7 +97,10 @@
   background-color: rgba(255, 255, 255, 0.2);
   position: absolute;
   width: 600px;
-  height: 565px;
+  height: auto;
+  min-height: 565px;
+  max-height: 650px;
+  overflow-y: auto;
   top: calc(50% + 20px);
   left: 50%;
   transform: translate(calc(-50% - 330px), -50%);
